--- a/src/css/_main.scss
+++ b/src/css/_main.scss
@@ -1,165 +1,177 @@
-.control {
-    height: 20%;
-    width: 100%;
-    @include flex_line;
-    justify-content: space-around;
-    .buttons {
-        width: 30%;
-        @include flex_line;
-        .button {
-            @include gray_block;
-            cursor: pointer;
-            width: 25%;
-        }
-        .button:hover {
-            background-color: white;
-            color: rgb(66, 66, 66);
+div {
+  opacity: 0.95;
+}
+.wrapper {
+  opacity: 1;
+}
 
-        }
+.control {
+  height: 20%;
+  width: 100%;
+  @include flex_line;
+  justify-content: space-around;
+  .buttons {
+    width: 300px;
+    @include flex_line;
+    .button {
+      @include gray_block;
+      cursor: pointer;
+      width: 25%;
     }
-    .input_city_block {
-        width: 30%;
-        @include flex_line;
-        .input_city {
-            @include gray_block;
-            width: 50%;
-        }
-        .button_city {
-            @include gray_block;
-            cursor: pointer;
-            width: 20%;
-        }
-        .button_city:hover {
-            background-color: white;
-            color: rgb(66, 66, 66);
-        }
-        .button_microphone {
-            @include gray_block;
-            cursor: pointer;
-            width: 10%;
-            color: rgb(173, 0, 0);
-        }
-        .button_microphone:hover {
-            color: rgb(66, 66, 66);
-            background-color:rgb(173, 0, 0);
-        }
+    .button:hover {
+      background-color: white;
+      color: rgb(66, 66, 66);
     }
+    .radio_button_container {
+      @include gray_block;
+      padding: 0;
+      display: flex;
+      justify-content: space-between;
+      .button {
+        border-radius: 10px;
+        border: unset;
+        width: unset;
+      }
+    }
+  }
+  .input_city_block {
+    width: 30%;
+    @include flex_line;
+    .input_city {
+        @include gray_block;
+        width: 50%;
+    }
+    .button_city {
+      @include gray_block;
+      cursor: pointer;
+      width: 20%;
+    }
+    .button_city:hover {
+      background-color: white;
+      color: rgb(66, 66, 66);
+    }
+    .button_microphone {
+      @include gray_block;
+      cursor: pointer;
+      width: 10%;
+      color: rgb(173, 0, 0);
+    }
+    .button_microphone:hover {
+      color: rgb(66, 66, 66);
+      background-color:rgb(173, 0, 0);
+    }
+  }
 }
 .output {
-    height: 80%;
-    width: 100%;
-    @include flex_line;
-    justify-content: space-around;
-    .data_output {
-        width: 50%;
-        @include flex_column;
-        .city_block, .date_block, .temperature_today_block, .temperature_future_block {
-            @include gray_block;
-            width: 100%;
-           
-        }
-        .temperature_today_block {
-            .temperature_now_block {
-                .sun_clouds_svg {
-                    height: 2em;
-                }
-            }
-           
-        }
-        .temperature_future_block {
-            cursor: pointer;
-            @include flex_line;
-            .temp_fut_day {
-                width: 33%;
-            }
-        }
+  height: 80%;
+  width: 100%;
+  @include flex_line;
+  justify-content: space-around;
+  .data_output {
+    width: 50%;
+    @include flex_column;
+    .city_block, .date_block, .temperature_today_block, .temperature_future_block {
+      @include gray_block;
+      width: 100%;  
     }
-    .mapbox {
-        width: 35%;
-        @include flex_column;
-        iframe {
-            width: 300px;
-            height: 300px;
-            border: 2px solid $orange;
-            border-radius: 10px;
+    .temperature_today_block {
+      .temperature_now_block {
+        .sun_clouds_svg {
+          height: 2em;
+          background-repeat: no-repeat;
+          background-position: center;
         }
-        .map_coordinates {
-            margin-top: 15px;
-            @include gray_block;
-            width: 80%;
-        }
+      }
     }
+    .temperature_future_block {
+      cursor: pointer;
+      @include flex_line;
+      .temp_fut_day {
+        width: 33%;
+        .param_block_fut {
+          background-repeat: no-repeat;
+          background-position: center;
+        }
+      }
+    }
+  }
+  .mapbox {
+    width: 35%;
+    @include flex_column;
+    iframe {
+      width: 300px;
+      height: 300px;
+      border: 2px solid $orange;
+      border-radius: 10px;
+    }
+    .map_coordinates {
+      margin-top: 15px;
+      @include gray_block;
+      width: 80%;
+    }
+  }
 }
 
 .future_block_detail {
-    width: 60%;
-    @include flex_column;
-    z-index: 100;
-    @include gray_block;
-    opacity: 0.85;
-    position: absolute;
-    top: 10%;
-    left: 20%;
-    cursor: pointer;
-    max-height: 85%;
-    overflow:hidden;
+  width: 60%;
+  @include flex_column;
+  z-index: 100;
+  @include gray_block;
+  opacity: 0.85;
+  position: absolute;
+  top: 10%;
+  left: 20%;
+  cursor: pointer;
+  max-height: 85%;
+  overflow:hidden;
 }
 
 @media screen and ( max-width: 750px) and(min-width: 531px)  {
-    .control {
-        .buttons {
-            width: 40%;
-        }
-        .input_city_block {
-            width: 40%;
-        }
-    }
-    .output {
-      
-        .mapbox{
-            iframe {
-                width: 210px;
-                height: 210px;
-                
-            }
-        }
-        
-      
+  .control {
+    .input_city_block {
+      width: 40%;
     }
   }
+  .output {
+    .mapbox{
+      iframe {
+        width: 210px;
+        height: 210px;          
+      }
+    }
+  }
+}
 
-  @media screen and (max-width: 530px) {
-    .control {
-        border-radius: 0px;
-        @include flex_column;
-        .buttons {
-            width: 95%;
-            margin: 15px auto 0 auto;
-        }
-        .input_city_block {
-            width: 95%;
-            margin: 10px auto 0 auto;
-        }
+@media screen and (max-width: 530px) {
+  .control {
+    border-radius: 0px;
+    @include flex_column;
+    .buttons {
+      width: 95%;
+      margin: 15px auto 0 auto;
     }
-    .output {
-        @include flex_column;
-        .data_output {
-            width: 95%;
-            margin: 10px auto 10px auto;
-            .city_block, .date_block, .temperature_today_block, .temperature_future_block {
-                @include gray_block;
-                width:95%;
-            }
-        }
-        .mapbox{
-            width: 100%;
-            @include flex_line;
-            iframe {
-                width: 210px;
-                height: 210px;
-            }
-        }
-        
-      
+    .input_city_block {
+      width: 95%;
+      margin: 10px auto 0 auto;
     }
   }
+  .output {
+    @include flex_column;
+    .data_output {
+      width: 95%;
+      margin: 10px auto 10px auto;
+      .city_block, .date_block, .temperature_today_block, .temperature_future_block {
+        @include gray_block;
+        width:95%;
+      }
+    }
+    .mapbox{
+      width: 100%;
+      @include flex_line;
+      iframe {
+        width: 210px;
+        height: 210px;
+      }
+    }
+  }
+}
